testdata/baselines/reference/submodule/compiler/tslibInJs.errors.txt
main.js(2,17): error TS2580: Cannot find name 'require'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.


==== main.js (1 errors) ====
    "use strict";
    const { foo } = require("bar");
                    ~~~~~~~
!!! error TS2580: Cannot find name 'require'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.